--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-img {
+img{
   display: block;
   width: 100%
 }
@@ -6,4 +6,23 @@ img {
 @media (max-width: 320px) {
   img:nth-child(2){display: none;}
   img:nth-child(5){display: none;}
+}
+
+@media (max-width: 400px) {
+  img:nth-child(2){
+    width: 50%;
+    float: left
+  }
+  img:nth-child(3){
+    width: 50%;
+    float: right
+  }
+  img:nth-child(4){
+    width: 50%;
+    float: left
+  }
+  img:nth-child(5){
+    width: 50%;
+    float: right
+  }
 }
