--- a/css/main.css
+++ b/css/main.css
@@ -3,26 +3,50 @@ img{
   width: 100%
 }
 
-@media (max-width: 320px) {
-  img:nth-child(2){display: none;}
-  img:nth-child(5){display: none;}
+
+img:nth-child(2){
+  display: none;
+}
+img:nth-child(5){
+  display: none;
 }
 
-@media (max-width: 400px) {
+
+@media only screen and (min-width: 400px) {
   img:nth-child(2){
     width: 50%;
-    float: left
+    float: left;
+    display: block;
   }
   img:nth-child(3){
     width: 50%;
-    float: right
+    float: right;
   }
   img:nth-child(4){
     width: 50%;
-    float: left
+    float: left;
   }
   img:nth-child(5){
     width: 50%;
-    float: right
+    float: right;
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 650px) {
+  img:nth-child(2) {
+    float: left;
+    width: 33.333%
+  }
+  img:nth-child(3) {
+    float: left;
+    width: 33.333%
+  }
+  img:nth-child(4) {
+    float: left;
+    width: 33.333%
+  }
+  img:nth-child(5){
+    display: none;
   }
 }
