--- a/css/main.css
+++ b/css/main.css
@@ -3,14 +3,12 @@ img{
   width: 100%
 }
 
-
 img:nth-child(2){
   display: none;
 }
 img:nth-child(5){
   display: none;
 }
-
 
 @media only screen and (min-width: 400px) {
   img:nth-child(2){
@@ -57,7 +55,7 @@ img:nth-child(5){
     width: 66.666%
   }
   img:nth-child(2) {
-    float: right;
+    float: left;
     width: 33.333%
   }
   img:nth-child(3) {
@@ -70,6 +68,7 @@ img:nth-child(5){
   }
   img:nth-child(5){
     float: right;
-    width: 33.333%
+    width: 33.333%;
+    display:block;
   }
 }
