--- a/css/main.css
+++ b/css/main.css
@@ -1,74 +1,93 @@
-img{
-  display: block;
-  width: 100%
+* {
+  margin: 0;
+  padding: 0;
 }
 
-img:nth-child(2){
-  display: none;
+img {
+  display: flex;
+  width: 100%;
 }
-img:nth-child(5){
+
+img:nth-child(2) {
   display: none;
 }
 
-@media only screen and (min-width: 400px) {
-  img:nth-child(2){
+img:nth-child(5) {
+  display: none;
+}
+
+@media only screen and (min-width: 25em) {
+
+  img:nth-child(2) {
     width: 50%;
     float: left;
     display: block;
   }
-  img:nth-child(3){
+
+  img:nth-child(3) {
     width: 50%;
     float: right;
   }
-  img:nth-child(4){
+
+  img:nth-child(4) {
     width: 50%;
     float: left;
   }
-  img:nth-child(5){
+
+  img:nth-child(5) {
     width: 50%;
     float: right;
     display: block;
   }
 }
 
-@media only screen and (min-width: 650px) {
+@media only screen and (min-width: 38em) {
+
   img:nth-child(2) {
     float: left;
-    width: 33.333%
+    width: 33.3333%;
   }
+
   img:nth-child(3) {
     float: left;
-    width: 33.333%
+    width: 33.3333%;
   }
+
   img:nth-child(4) {
     float: left;
-    width: 33.333%
+    width: 33.3333%;
   }
-  img:nth-child(5){
+
+  img:nth-child(5) {
     display: none;
   }
 }
 
-@media only screen and (min-width: 980px) {
+@media only screen and (min-width: 60em) {
+
   img:first-child {
     float: left;
-    width: 66.666%
+    width: 66.6666%;
   }
+
   img:nth-child(2) {
     float: left;
-    width: 33.333%
+    width: 33.3333%;
   }
+
   img:nth-child(3) {
     float: left;
-    width: 33.333%
+    width: 33.3333%;
   }
+
   img:nth-child(4) {
     float: left;
-    width: 33.333%
+    width: 33.3333%;
   }
-  img:nth-child(5){
+
+  img:nth-child(5) {
     float: right;
-    width: 33.333%;
-    display:block;
+    width: 33.3333%;
+    display: block;
   }
 }
