--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+@mozviewport { width: device-width; scale: 1}
+@-ms-viewport {width: device-width; scale: 1;}
+@-o-viewport {width: device-width; scale: 1;}
+@-webkit-viewport {width: device-width; scale: 1;}
+@viewport {width: device-width; scale: 1;}
+
 * {
   margin: 0;
   padding: 0;
